feat: add environment variable support for port configuration, include `--remove-orphans` in clean, and update manager healthcheck to use Python.

--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -68,7 +68,7 @@ services:
     networks:
       - emcp-network
     healthcheck:
-      test: ["CMD", "curl", "-f", "http://localhost:5000/api/current"]
+      test: ["CMD", "python", "-c", "import urllib.request; urllib.request.urlopen('http://localhost:5000/api/current')"]
       interval: 30s
       timeout: 10s
       retries: 3
